--- a/CourseNotes/GraphingIntro/DraftNarrative.Rmd
+++ b/CourseNotes/GraphingIntro/DraftNarrative.Rmd
@@ -1,8 +1,23 @@
 ---
-title: "Draft Narrative"
-output: html_document
+output:
+  html_document:
+    css: ~/KaplanFiles/DCF-2014/CSS/DCF-style.css
+    fig_caption: yes
+    toc: yes
 ---
 
-In this document, place draft narrative for this section of the notes. 
+```{r child="/Users/kaplan/KaplanFiles/DCF-2014/CSS/DCF-common.Rmd"}
+```
 
 * Time Series: `DCF::babyNamesYearly`
+
+## Making Data Graphics: Introduction
+
+Steps:
+
+1. Choose a modality: `scatter()`, `density()`, `barplot()`, `network()`.
+2. Choose the variable that corresponds to each aspect of the plot.
+3. Cut and paste the command into your report.
+
+These functions just construct graphics.  The data already need to be in a form where there is a variable for each aspect being used, e.g. an x- and y-variable for a scatter plot.
+
