--- a/CourseNotes/Rbasics/DraftNarrative.Rmd
+++ b/CourseNotes/Rbasics/DraftNarrative.Rmd
@@ -22,7 +22,7 @@ You'll probably get an inkling of what the expressions used as examples here are
 * How assignment allows values to be stored and referred to by name.
 * How the output of one function can become the input to another.
 
-You are **not** expected at this point to be able to write R expressions.  You'll have plenty of opportunity to do that once you've learned to read R expressions.
+You are **not** expected at this point to be able to *write* R expressions.  You'll have plenty of opportunity to do that once you've learned to *read* R expressions.
 
 If you are already experienced with writing statements in R, please read this footnote.^[Chances are, the expressions you will see in these notes will look little or nothing like the commands that you are used to writing.  The expressions here are written in what might be called a "dialect" or "accent" of R.  This dialect emphasizes functions and functions that work with data frames.  (The more general term, "data table" is used here.)  A small set of functions is emphasized that will be unfamiliar: `group_by()`, `summarise()`, `filter()` and so on.  These have been designed carefully by Hadley Whickham and his collaborators to give a smooth, consistent interface between the data scientist and the computer. In addition, you will see extensive use of *chaining*, a way of connecting the inputs and outputs of function.  This involves the `%>%` function.  To give an example, the mathematical expression $\cos( \sqrt{x} )$ would traditionally be written in R as `cos( sqrt( x ) )`, with the output of `sqrt()` being passed as the input to `cos()`. In the chaining style, this would be written `x %>% sqrt() %>% cos()`.  You can decide for yourself whether you prefer the traditional or chaining style for the kinds of operations introduced in these notes.  You can use either.  Finally, you will see *only* the `<-` notation used for assignment.  There's nothing wrong with using `=`, but this is saved for the arguments to functions rather than storage.]  If not, just move on.
 
@@ -35,7 +35,7 @@ When you write an expression in R, you are drawing on two distinct things:
 
 For these notes, you will need only a small set of functions, about 30 altogether. It won't be too hard to memorize their names and what they do.
 
-You should take note of an important distinction about the arguments to the various functions. (Remember that "argument" is synonymous with "input."  Functions take one or more inputs and produce an output.  The output is sometimes called the "return value" of the function.)
+You should take note of an important distinction about the arguments to the various functions. (Remember that "argument" is synonymous with "input."  Functions take one^[Actually, functions take zero or more arguments.  Some functions, like `date()`, don't take any arguments at all.] or more inputs and produce an output.  The output is sometimes called the "return value" of the function.)
 
 * Some functions take as one of their inputs a data table.  There might be other inputs as well.
 * Some functions do not take a data table, but a variable from a data table.
@@ -54,9 +54,9 @@ Remember that this is a **convention**, not a rule enforced by the language.  As
 
 Here are some of the functions you will often use:
 
-**Dataframes as an argument**: `str()`,`head()`, `summarise()`, `group_by()`, `ggplot()`, `makeChart()`, `filter()`, `select()`, `sample_n()`, `join()`.
+*Functions that take **dataframes** as an argument*: `str()`,`head()`, `summarise()`, `group_by()`, `ggplot()`, `makeChart()`, `filter()`, `select()`, `sample_n()`, `join()`.
 
-**Variables as an argument**: `mean()`, `max()`, `sqrt()`, `IQR()`, `+`, `==`, `>`, and so on.
+*Functions that take **variables** as an argument*: `mean()`, `max()`, `sqrt()`, `IQR()`, `+`, `==`, `>`, and so on.
 
 Note that functions names are always followed by a pair of parentheses.  When the function is being used as part of a command, the arguments to the function go inside the parentheses.
 
@@ -178,7 +178,7 @@ Result <- select( BabyNames, year, name )
 
 #### Create a new variable.  
 
-Functions such as `summarise()` and `mutate()` can create new variables.  In every case, you specify both the *name* of the new variable and the value you want it to take.  The syntax is *name* `=` *value*.
+Functions such as `summarise()` and `mutate()` can create new variables.^[Programmers in many languages other than R, often refer to objects as variables.  But remember, a variable is a column of a data table.  The data table itself is an "object."  `summarize()` and `mutate()` produce an output that is a data table, but they create new variables that go into the data table.]  In every case, you specify both the *name* of the new variable and the value you want it to take.  The syntax is *name* `=` *value*.
 
 Example:
 
@@ -199,71 +199,5 @@ ggplot( Princes, aes(x=year,y=yearlyTotal) ) +
 
 Here, `x` is the name of an argument to the function `aes()`.  The expression, `x=year` means that the `x` input will be the values of the `year` variable.  Similarly, `geom_vline()` has a large number of potential arguments, including `xintercept`, `alpha`, `linetype`, `color`, etc.  The expression `xintercept=1978` says to set the `xintercept` argument to the value 1978.
     
-### EXERCISES
-
-For each of the functions, indicate whether it operates on a variable or a data table. `mean()`, `sum()`, `str()`, `group_by()`
-
-DO MULTIPLE CHOICE EXAMPLES
 
 
-In the following statements, say which names refer to data tables and which ones refer to variables.  In order to make it a bit of a challenge, the statements don't necessarily respect the convention that names of data tables start with a capital letter and names of variables start with a lower-case letter.
-
-DO MULTIPLE CHOICE EXAMPLES
-
-Here are several chains of functions. For each of the functions listed, say whether there is an implicit input coming from the chaining `%>%`.
-
-```{r}
-Princes <-
-  BabyNames %>%
-  filter( name=="Prince" ) %>%
-  group_by( year, sex ) %>%
-  summarise( yearlyTotal=sum( count ) )
-```
-
-* `filter()`: Implicit input: yes or no
-* `summarise()`: Implicit input: yes or no
-* `sum()`, Implicit input: yes or no
-In an expression like
-
-```
-summarize( BabyNames, )
-
-```
-In the previous examples, you've seen some phrases like `yearlyTotal=sum( count )` or `color=sex`.  These involve the `=` sign, which is used to give a name to a variable.
-
-
-Add a new variable PRINCE containing "Prince."  Add a new variable containing "increase over previous year."
-
-EXERCISES FROM NETTA:
-
-You can copy the commands shown in the notes, modifying them to address the question at hand.
-
-
-
-Functions that work on a data table.
-
-Functions that work on a variable within a data table.
-
-
-## RStudio Menu and Keyboard Shortcuts
-
-
-
-`str()`, `names()`, `head()`, `sample_n()`, 
-
-Using TAB in RStudio.  (For video also.)
-
-
-putting things together: `c()`,  
-
-`mean()`, `sum()`, and so on.
-
-Meaning of `NA` 
-
-Example of `mean( , na.rm=TRUE )`.   Difference with `NaN`.
-
-`==` and other comparison operators.  How `sum()` and `mean()` work to produce counts and proportions.
-
-SAVE transformation functions (e.g. `rank()`, `ntiles()`, `row_number()` ) until mutate.
-
-what NULL means
